<?xml version="1.0"?>
<package format="3">
  <name>f75111_io_controller</name>
  <version>0.0.0</version>
  <description>This packages provides an interface for control of the F75111 GPIO pins.</description>

  <maintainer email="steven.dale@swri.org">Stevie Dale</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

